- fixed jumping effect when opening lineup disposition or stats window in a match in the bottom of a list of matches opened.

--- a/chrome/content/themes/custom.css
+++ b/chrome/content/themes/custom.css
@@ -383,3 +383,7 @@ background-repeat:no-repeat;
 background-position:center top;
 background-origin:content-box;}
 .formationplayer{background-color: transparent;border:thin solid white;border-radius:5px;color:white !important;}
+
+.underlined{
+	cursor:pointer;
+}
